--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="La mejor heladeria de Los Colores">
+  <meta name="description" content="Los mejores aplastados de medellin">
   <meta name="robots" content="index, follow">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/styles/style.css">
-  <title>Heladeria St. Clemente</title>
+  <title>Aplastados Pacho</title>
 </head>
 <body>
   <header>
@@ -31,7 +31,7 @@
         </li>
         <li>
           <a href="">
-            <button class="dropdown-item burguer-menu__list-item" type="button">Galeria</button>
+            <button class="dropdown-item burguer-menu__list-item" type="button">Domicilios</button>
           </a>
         </li>
         <li>
@@ -42,7 +42,7 @@
       </ul>
     </div>
     <figure class="hero-container">
-      <img src="./assets/images/Logo-heladeria.jpg" alt="Logo de Heladeria San Clemente">
+      <img src="./assets/images/aplastaos.jpg" alt="Logo de Aplastaos de pacho">
     </figure>
     <div class="navbar-container">
       <nav>        
@@ -50,7 +50,7 @@
           <li>
             <a>Menu</a>
             <a>Promociones</a>
-            <a>Galeria</a>
+            <a>Domicilios</a>
             <a>Contactanos</a>
           </li>
         </ul>
@@ -62,16 +62,16 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/images/helado1.jpg" class="d-block w-100" alt="helado#1"/>
+            <img src="./assets/images/hamburguesa1.jpg" class="d-block w-100" alt="hamburguesa#1"/>
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/paletas.jpg" class="d-block w-100" alt="paletas">
+            <img src="./assets/images/sandwich.jpg" class="d-block w-100" alt="sandwich">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/helado2.jpg" class="d-block w-100" alt="helado#2">
+            <img src="./assets/images/hamburguesa2.jpg" class="d-block w-100" alt="hamburguesa#2">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/helado3.jpg" class="d-block w-100" alt="helado#3">
+            <img src="./assets/images/hamburguesa3.jpg" class="d-block w-100" alt="hamburguesa#3">
           </div>
         </div>
       </div>
@@ -79,14 +79,19 @@
   </main>
   <footer id="footer">
     <div class="footer-container">
-      <div class="location">
-        <h3>Ven a visitarnos</h3>
-        <p>Calle 53 #78-17</p>
-      </div>
+
       <div class="contact">
         <h3>Contactanos facil</h3>
-        <p>320-382-2946</p>
+        <p>034-589-7636</p>
       </div>
+
+      <div class="location">
+        <h3>Ven a visitarnos</h3>
+        <a class="maps-button" href="https://www.google.com/search?bih=568&biw=1366&hl=es-419&sxsrf=ALeKk02e9lcYg-CjtbHBbLPQVQnQONwE-w:1614145498407&ei=1ec1YLEhxoHnAoqYrKAL&q=aplastados%20de%20pacho&oq=aplastados+de+pacho&gs_lcp=Cgdnd3Mtd2l6EAMyBAgjECcyCAgAEMcBEK8BMgIIADIICAAQxwEQrwEyCAgAEMcBEK8BMgYIABAWEB4yBggAEBYQHjIGCAAQFhAeMgYIABAWEB4yBggAEBYQHjoHCCMQsAMQJzoHCAAQRxCwA1CfH1jGIGC5IWgBcAJ4AIABmQGIAaUCkgEDMC4ymAEAoAEBqgEHZ3dzLXdpesgBCcABAQ&sclient=gws-wiz&ved=2ahUKEwj95rDI6IHvAhWpxFkKHSSQAmgQvS4wAHoECAMQLw&uact=5&tbs=lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3,lf:1,lf_ui:9&tbm=lcl&rflfq=1&num=10&rldimm=18177107415528138859&lqi=ChNhcGxhc3RhZG9zIGRlIHBhY2hvWioKE2FwbGFzdGFkb3MgZGUgcGFjaG8iE2FwbGFzdGFkb3MgZGUgcGFjaG-SAQpyZXN0YXVyYW50&rlst=f#rlfi=hd:;si:18177107415528138859,l,ChNhcGxhc3RhZG9zIGRlIHBhY2hvWioKE2FwbGFzdGFkb3MgZGUgcGFjaG8iE2FwbGFzdGFkb3MgZGUgcGFjaG-SAQpyZXN0YXVyYW50;mv:[[6.269206199999999,-75.5879539],[6.2172581,-75.6075358]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3,lf:1,lf_ui:9">
+          Google maps
+        </a>
+      </div>
+      
       <div class="networks">
         <h3>Siguenos en nuestras redes</h3>
         <figure>
